// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Trades should render correctly 1`] = `
<Row
  className="mt-4"
  tag="div"
>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="12"
  >
    <span
      className="font-weight-bold h5"
    >
      My trades
    </span>
    <Link
      className="float-right"
      replace={false}
      to="/buy"
    >
      Find offer
    </Link>
  </Col>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="12"
  >
    <Card
      body={true}
      className="py-0"
      tag="div"
    >
      <div
        className="d-flex my-1"
        key="0"
      >
        <span
          className="flex-fill align-self-center"
        >
          <Identicon
            className="align-middle rounded-circle"
            seed="address"
          />
          <span
            className="ml-2"
          >
            Name
          </span>
        </span>
        <span
          className="flex-fill align-self-center"
        >
          2
           ETH
        </span>
        <span
          className="flex-fill align-self-center text-right text-success"
        >
          <FontAwesomeIcon
            border={false}
            className="mr-2"
            fixedWidth={false}
            flip={null}
            icon={
              Object {
                "icon": Array [
                  512,
                  512,
                  Array [],
                  "f111",
                  "M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8z",
                ],
                "iconName": "circle",
                "prefix": "fas",
              }
            }
            inverse={false}
            listItem={false}
            mask={null}
            pull={null}
            pulse={false}
            rotation={null}
            size={null}
            spin={false}
            symbol={false}
            title=""
            transform={null}
          />
          open
        </span>
      </div>
    </Card>
  </Col>
</Row>
`;

exports[`Trades should render when empty 1`] = `
<Row
  className="mt-4"
  tag="div"
>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="12"
  >
    <span
      className="font-weight-bold h5"
    >
      My trades
    </span>
    <Link
      className="float-right"
      replace={false}
      to="/buy"
    >
      Find offer
    </Link>
  </Col>
  <Col
    tag="div"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
    xs="12"
  >
    <Card
      body={true}
      className="text-center"
      tag="div"
    >
      No open trades
    </Card>
  </Col>
</Row>
`;
